--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body{
     transform: translateY(-100px);
 }
 .card .text{
-    font-family: 'Brush Script MT', cursive;
+    font-family: 'Samantha Upright Pro', cursive;
     font-size: 28px;
     text-align: center;
     line-height: 25px;
